--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	@apply leading-tight;
+}
+p {
+	@apply font-serif leading-tight;
+}
+
+/* .eczar-v1 {
+	font-family: 'Eczar', serif;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
+}
+
+.darker-grotesque-v1 {
+	font-family: 'Darker Grotesque', sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 700;
+	font-style: bold;
+} */
